# python-ffi

./: .gitignore  Cargo.toml  Makefile  bench.py  gen.odin  ieee.typ  main.typ  plots.ipynb  refs.bib  struct.typ
bind_c/: Cargo.toml  pyproject.toml
bind_c/src/: lib.rs
bind_cffi/: Makefile  build.py  pyproject.toml  setup.py  test.py
bind_cffi/src/bind_cffi/: __init__.py  header.h
bind_ctypes/: Makefile  pyproject.toml
bind_ctypes/src/bind_ctypes/: __init__.py
bind_pyo3/: Cargo.toml  Makefile  expanded.rs  pyproject.toml
bind_pyo3/src/: lib.rs
simple/: Cargo.toml  Makefile  simple.c  simple.py
simple/src/: main.rs
statistics/src/: lib.rs
